# K230_training_scripts

./: README.md
end2end_cls_doc/: README.md  requirements.txt  requriements.txt
end2end_cls_doc/k230_code/: CMakeLists.txt  build_app.sh
end2end_cls_doc/k230_code/k230_deploy/: CMakeLists.txt  ai_base.cc  classification.cc  classification.h  main.cc  utils.cc  utils.h  vi_vo.h
end2end_cls_doc/scripts/: __init__.py  dataset.py  inference.py  main.py  splitdata.py  to_kmodel.py
end2end_cls_doc/utils/: read_yaml.py
end2end_cls_doc/yaml/: config.yaml
end2end_det_doc/: README.md  requirements.txt  requriements.txt
end2end_det_doc/data/fruit/: labels.json
end2end_det_doc/k230_code/: CMakeLists.txt
end2end_det_doc/scripts/: dataset.py  inference.py  main.py  model.py  splitdata.py  tokmodel.py
end2end_det_doc/utils/: Yolo5Loss.py  autoanchor.py  dataAugment.py  general.py  json_io.py  metrics.py  post_process.py  torch_utils.py  tricks.py
end2end_det_doc/yaml/: config.yaml
end2end_kws_doc/: README.md  requirements.txt
end2end_kws_doc/k230_code/: CMakeLists.txt  build_app.sh
end2end_kws_doc/tools/: compute_cmvn_stats.py  make_list.py  wav_to_duration.sh
end2end_translate_doc/: README.md  requirements.txt
end2end_translate_doc/k230_code/: CMakeLists.txt
end2end_translate_doc/k230_code/k230_deploy/: CMakeLists.txt
end2end_translate_doc/k230_code/sentencepiece/: build.sh
end2end_translate_doc/scripts/: dataset.py  inference.py  main.py  model.py  splitdata.py  tokmodel.py
end2end_translate_doc/yaml/: config.yaml
(+421 files in other folders)
